# cordo

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
cordoc/: BUILD.bazel  cordoc_main.cc
demo/: BUILD.bazel  demo.cc  demo.cordo.hh  demo.cordo.inc  demo.hh  demo.hh.cordo
examples/: one.hh
include/cordo/: cordo.hh
include/cordo/impl/: accessor.hh  algo.hh  anno.hh  any.hh  compose.hh  composed.hh  cpo.hh  erased.hh  field.hh  get.hh  get2.hh  kv.hh  literal.hh  macros.hh  meta.hh  mirror.hh  mirror_option.hh  mirror_primitive.hh  mirror_result.hh  mirror_struct.hh  mirror_variant.hh  named.hh  named_tuple.hh  option.hh  property.hh  struct.hh  value.hh
include/cordo/impl/core/: algo.hh  anno.hh  any.hh  cpo.hh  cstring.hh  hook.hh  invoke.hh  kv.hh  literal.hh  macros.hh  meta.hh  pipe.hh  reflect.hh
include/cordo_json/: cordo_json.hh
tests/: algo_test.cc  invoke_test.cc  mirror_option_test.cc  mirror_primitive_test.cc  mirror_struct_test.cc  mirror_test.cc  mirror_variant_test.cc  pipe_test.cc  pipe_test.cc1
tests/cordo/: algo_test.cc  cpo_test.cc  invoke_test.cc  mirror_option_test.cc  mirror_struct_test.cc  mirror_variant_test.cc  pipe_test.cc
tests/cordo_json/: to_json_test.cc
