cc_library(
    name = "cordo",
    srcs = glob(["include/cordo/impl/**/*.hh"]),
    hdrs = ["include/cordo/cordo.hh"],
    copts = ["-std=c++20"],
    includes = ["include"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "cordo_test",
    srcs = glob(["tests/*.cc"]),
    copts = ["-std=c++20"],
    deps = [
        ":cordo",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
    size = "small",
)
