cc_library(
    name = "cordo",
    srcs = glob(["include/cordo/impl/**/*.hh"]),
    hdrs = ["include/cordo/cordo.hh"],
    copts = ["-std=c++20"],
    includes = ["include"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "cordo_test",
    size = "small",
    srcs = glob(["tests/cordo/*.cc"]),
    copts = ["-std=c++20"],
    deps = [
        ":cordo",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "cordo_json",
    hdrs = ["include/cordo_json/cordo_json.hh"],
    copts = ["-std=c++20"],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        ":cordo",
        "@nlohmann_json//:json",
    ],
)

cc_test(
    name = "cordo_json_test",
    size = "small",
    srcs = glob(["tests/cordo_json/*.cc"]),
    copts = ["-std=c++20"],
    deps = [
        ":cordo_json",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@nlohmann_json//:json",
    ],
)
